# orc

./: .gitignore  AGENTS.md  README.md  iac864cqtovpppeconergpnn4ahltqdb  iac864cqtovpppeconergpnn4ahltqdb.records  iac864cqtovpppeconergpnn4ahltqdb.tail  manifest  p6pvjkotqiumml6lnlcgpju7hscrol4t.darc  p6pvjkotqiumml6lnlcgpju7hscrol4t.darc.records  p6pvjkotqiumml6lnlcgpju7hscrol4t.darc.tail  pyproject.toml
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml
docs/prds/: 0001-amp-orchestrator-mvp.md  0001-orc-mvp.md  orc-beads-dispatch-exploration-prd.md  orc-epic-orchestration-prd.md  repo_hygiene_2026_03.md
docs/research/: thread-summary-extraction.md
src/amp_orchestrator/: __init__.py  amp_runner.py  cli.py  config.py  control.py  evaluator.py  events.py  lock.py  merge.py  queue.py  scheduler.py  state.py  subprocess_launcher.py  worktree.py
src/orc/: __init__.py  already_implemented.py  amp_runner.py  cli.py  config.py  control.py  dispatch_policy.py  doctor.py  evaluator.py  events.py  lock.py  merge.py  queue.py  scheduler.py  state.py  subprocess_launcher.py  workflow.py  worktree.py
tests/: test_already_implemented.py  test_amp_runner.py  test_cli.py  test_config.py  test_control.py  test_dashboard.py  test_dispatch_policy.py  test_doctor.py  test_evaluator.py  test_events.py  test_explore_cli.py  test_explore_planner.py  test_explore_runner.py  test_issue_inspect.py  test_lock.py  test_merge.py  test_queue.py  test_scheduler.py  test_snapshot.py  test_state.py  test_subprocess_launcher.py  test_tui.py  test_widgets.py  test_worktree.py
(+20 files in other folders)
